@@ -2,6 +2,10 @@ Version 2.0.3
 * Post DiFX-2.6
 * add env var MARK6_META_ROOT for entirely module-free playback
 * api: add getMark6Metapath(), mark6_sg_get/set_metapath()
+* getMark6GathererFileSize() : now returns the file size as it will be gathered rather than the collective sizes of the Mark6 scattered files.
+  - new function getMark6GathererSourceFileSize() allows previous behavior.
+* mark6Gather() : fix bug which sometimes caused one or more blocks from end of a gather to be ignored. 
+  - with this fix, and with the above getMark6GathererFileSize() change, the resultant file sizes should be in accord.
 
 Version 2.0.2
 * Post DiFX-2.6
